<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg_grey"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/tv1"
                android:textColor="@color/tab_grey" />

            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv2"
                    android:textColor="@color/settings_txt" />

                <CheckBox
                    android:id="@+id/cb_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:button="@drawable/checkbox_drawable" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/seperator" />

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/tv3"
                android:textColor="@color/tab_grey" />

            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv4"
                    android:textColor="@color/settings_txt" />

                <TextView
                    android:id="@+id/tv_last_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="@color/settings_txt" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/seperator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv5"
                    android:textColor="@color/settings_txt" />

                <CheckBox
                    android:id="@+id/cb_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:button="@drawable/checkbox_drawable" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/seperator" />

            <RelativeLayout
                android:id="@+id/rl_4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv11"
                    android:textColor="@color/settings_txt" />

                <CheckBox
                    android:id="@+id/cb_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:button="@drawable/checkbox_drawable" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/seperator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/tv6"
                android:textColor="@color/tab_grey" />

            <RelativeLayout
                android:id="@+id/rl_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle"
                android:clickable="true" >

                <TextView
                    android:id="@+id/tv_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv7"
                    android:textColor="@color/settings_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/list_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/seperator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_acces_to_hotel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv8"
                    android:textColor="@color/settings_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/list_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/seperator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_blocked_users"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_8_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv8_1"
                    android:textColor="@color/settings_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/list_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/seperator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv9"
                    android:textColor="@color/settings_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/list_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/seperator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_signout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/form_middle" >

                <TextView
                    android:id="@+id/tv_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/tv10"
                    android:textColor="@color/settings_txt" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/list_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/seperator" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>