<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_securecode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/bg_white" >

        <RelativeLayout
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bg_grey" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="15dp"
                android:text="@string/title_Cpass"
                android:textColor="#5688b0"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v1"
            android:background="@color/bg_white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_opass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/bg_white"
                android:hint="@string/title_Opass"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textSize="13sp" >

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/seperator" />

            <EditText
                android:id="@+id/et_newpass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/bg_white"
                android:hint="@string/title_Npass"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textSize="13sp" >
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/seperator" />

            <EditText
                android:id="@+id/et_confpass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/bg_white"
                android:hint="@string/title_Conpass"
                   android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textSize="13sp" >
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/seperator" />

            <ImageView
                android:id="@+id/bt_continue"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/v1"
                android:layout_margin="10dp"
                android:background="@drawable/countinue_button"
                android:clickable="true"
                android:scaleType="fitXY" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>